--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ subjects:
 - !lcsh 'Economics'
 - !lcsh 'Industries'
 - !lcc 'HB'
+- GITenberg
 title: The Acquisitive Society
 url: http://www.gutenberg.org/ebooks/33741
